fix: prevent pseudo-element ::after on Button to overflow it

--- a/src/components/Button/styling/Button.scss
+++ b/src/components/Button/styling/Button.scss
@@ -111,6 +111,10 @@
       box-shadow: var(--light-elevation-2);
     }
 
+    &::after {
+      border-radius: inherit;
+    }
+
     &.str-chat__button--size-lg {
       padding-block: var(--button-padding-y-lg);
       padding-inline: var(--button-padding-x-with-label-lg);
